--- a/index.html
+++ b/index.html
@@ -3,24 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AnimeVerse - Discover Your Next Anime Adventure</title>
+    <title>OtakuVerse - Discover Your Next Otaku Adventure</title>
     <meta
       name="description"
       content="Search and discover thousands of anime and manga titles. Find ratings, episodes, and recommendations for your next favorite series."
     />
     <meta name="author" content="AnimeVerse" />
 
-    <meta property="og:title" content="AnimeVerse - Anime & Manga Search Engine" />
+    <meta property="og:title" content="OtakuVerse - Anime & Manga Search Engine" />
     <meta
       property="og:description"
       content="Your ultimate destination for discovering anime and manga with real-time search and recommendations."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
   <body>
     <div id="root"></div>
